--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="col-md-5">
         <div id="gauge"></div>
       </div>
-    </div>
+  </div>
     <div class="row">
       <div class="col-md-12">
         <div id="bubble"></div>
@@ -48,9 +48,8 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="./static/js/app.js"></script>
-  <script src="./static/js/bonus.js"></script>
-  <script src="samples.json"></script>
-  
+  <!-- <script src="./static/js/bonus.js"></script> -->
+
 </body>
 
 </html>
